# azure-sandbox

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
app_service_demo/: main.py
func_app_http/: function_app.py
terraform/: main.tf
