[project]
name = "azure-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "T20"]
