[project]
name = "azure-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.11",
    "uvicorn>=0.34.2",
]

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "T20"]
